[project]
name = "ujuc.github.io"
version = "2.0.0"
description = "blog"
authors = [
    { name = "sungjin.kang", email = "ujuc@ujuc.me" }
]
dependencies = [
    "pendulum>=3.0.0",
    "pelican>=4.9.1",
    "markdown>=3.6",
    "rich>=13.7.1",
    "cleo>=2.1.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.rye]
managed = true
dev-dependencies = []

[project.scripts]
cli = "cli.main:run"
